오류 수정중
무한반복 예정임

--- a/_sass/minimal-mistakes/_mixins.scss
+++ b/_sass/minimal-mistakes/_mixins.scss
@@ -61,7 +61,7 @@
   $green: green($color);
   $blue: blue($color);
 
-  $yiq: calc((($red * 299) + ($green * 587) + ($blue * 114)) / 1000);
+  $yiq: (0.299 * $red + 0.587 * $green + 0.114 * $blue);
   @if $yiq-debug {
     @debug $yiq, $threshold;
   }
