--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -168,7 +168,7 @@ body {
     &::before,
     &::after {
       letter-spacing: -0.2em;
-      content: "\00a0"; /* non-breaking space*/
+      content: '\00a0'; /* non-breaking space*/
     }
   }
 
@@ -284,8 +284,8 @@ body {
 }
 
 /*
-   Social sharing
-   ========================================================================== */
+     Social sharing
+     ========================================================================== */
 
 .page__share {
   margin-top: 2em;
@@ -313,8 +313,8 @@ body {
 }
 
 /*
-   Page meta
-   ========================================================================== */
+     Page meta
+     ========================================================================== */
 
 .page__meta {
   margin-top: 2em;
@@ -338,14 +338,14 @@ body {
 }
 
 .page__meta-sep::before {
-  content: "\2022";
+  content: '\2022';
   padding-left: 0.5em;
   padding-right: 0.5em;
 }
 
 /*
-   Page taxonomy
-   ========================================================================== */
+     Page taxonomy
+     ========================================================================== */
 
 .page__taxonomy {
   .sep {
@@ -441,8 +441,8 @@ body {
 }
 
 /*
-   Comments
-   ========================================================================== */
+     Comments
+     ========================================================================== */
 
 .page__comments {
   // float: left;
@@ -539,8 +539,8 @@ body {
 }
 
 /*
-   Related
-   ========================================================================== */
+     Related
+     ========================================================================== */
 
 .page__related {
   @include clearfix();
@@ -570,8 +570,8 @@ body {
 }
 
 /*
-   Wide Pages
-   ========================================================================== */
+     Wide Pages
+     ========================================================================== */
 
 .wide {
   .page {
