오류 수정중
언제까지 깨질 예정인지..

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -3,6 +3,8 @@
    ========================================================================== */
 
 .archive {
+  max-width: 79%;
+  display: inline-block;
   margin-top: 1.5em;
   margin-bottom: 2em;
 
