테마 수정중
잔인한.. 테마

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -81,6 +81,11 @@ body {
   }
 }
 
+.page .h-entry {
+  max-width: 79%;
+  display: inline-block;
+}
+
 .page__title {
   margin-top: 0;
   line-height: 1;
