--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -9,6 +9,8 @@
 .sidebar {
   @include clearfix();
   margin: 0 auto;
+  display: inline-block;
+  max-width: 20%;
 
   @include breakpoint($large) {
     float: left;
