테마 수정중
반응형 맞추기

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -4,7 +4,7 @@
 
 .archive {
   max-width: 79%;
-  display: inline-block;
+  // display: inline-block;
   margin-top: 1.5em;
   margin-bottom: 2em;
 
