--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -4,6 +4,7 @@
 
 #main {
   @include clearfix;
+  display: flex;
   margin-left: auto;
   margin-right: auto;
   padding-left: 1em;
@@ -15,6 +16,7 @@
   animation-delay: 0.15s;
 
   @include breakpoint($x-large) {
+    flex-direction: row;
     max-width: $max-width;
   }
 }
